Update target on links

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
                 <h3>Elizabeth Lankford</h3>
                 <p>Frontend Developer</p>
                 <h4>Dallas, Texas</h4>
-                <a href="https://www.linkedin.com/in/elizabethlankford/"><img src="images/icon-linkedin.png" class="icon"></a>
-                <a href="https://github.com/ElizabethLankford"><img src="images/icon-github.png" class="icon"></a>
-                <a href="malito:elizabethlankford1@gmail.com"><img src="images/icon-email.png" class="icon"></a>
+                <a href="https://www.linkedin.com/in/elizabethlankford/" target="_blank"><img src="images/icon-linkedin.png" class="icon"></a>
+                <a href="https://github.com/ElizabethLankford" target="_blank"><img src="images/icon-github.png" class="icon"></a>
+                <a href="malito:elizabethlankford1@gmail.com" target="_blank"><img src="images/icon-email.png" class="icon"></a>
             </div>
         </div>
     </body>
